client/css/main.css
#login-buttons {
  padding-top: 7px;
}

.login-display-name {
  vertical-align: middle;
  color: white;
}

.question-code {
  position: relative;
}

.question-code textarea {
  width: 460px;
  height: 200px;
}

.question-canvas {
  position: relative;
}

.question-canvas canvas {
  width: 350px;
  height: 200px;
  border: 1px solid blue;
  padding: 4px 6px;
}

.question-output  {
  font-family: monospace;
}

.codearea {
  font-family: monospace;
}

